	PR c++/12397 	* typeck.c (finish_class_member_access_expr): Don't tree 	IDENTIFIER_NODEs as non-dependent expressions.

PR c++/12397
	* g++.dg/template/lookup3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@74949 138bc75d-0d04-0410-961f-82ee72b054a4